# io-uring-static-server

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  benchmark.sh
benchmark/: io-uring-static-server-1-cpu.txt  io-uring-static-server-8-cpu.txt  ngnix-8-cpu.txt
benchmarks/: io-uring-static-server-1-cpu.txt  io-uring-static-server-8-cpu.txt  ngnix-1-cpu.txt  ngnix-8-cpu.txt
configs/: io-uring-server-1-cpu.conf  io-uring-server-8-cpu.conf
data/: example_config.conf  nginx-1-cpu.conf  nginx-8-cpu.conf
include/: config.h  connection_state.h  event.h  event_loop.h  http.h  io_uring_wrappers.h  logger.h  resources.h  server.h  utils.h
src/: config.cpp  connection_state.cpp  event_loop.cpp  http.cpp  logger.cpp  main.cpp  resources.cpp  server.cpp  utils.cpp
